registry-ServiceClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-cip
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
