registry-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "registry"
  annotations:
    cert-manager.io/issuer: "registry-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "registry.sunsingerus.com"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: registry-cip
              servicePort: 5000
  tls:
    - hosts:
        - "registry.sunsingerus.com"
      secretName: registry-tls
